# javascript-avatar-generator

./: .gitignore  index.html
gps-ble/: CMakeLists.txt  gps.cpp  gps.h  gps_server.cpp  gps_server.h  main.cpp
js/: conn.js
python-utils/: ble-config.py  scanres.py
